tests/transpiler/x/scala/partial_application.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/partial_application.scala:9: error: not enough arguments for method add: (a: Int, b: Int)Int.
Unspecified value parameter b.
    val add5: (Int) => Any = ((b: Int) => add(5))
                                             ^
one error found
