tests/transpiler/x/scala/partial_application.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:42:50 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def add(a: Int, b: Int): Int = {
    return a + b
  }

  def main(args: Array[String]): Unit = {
    val add5: (Int) => Any = ((b: Int) => add(5))
    println(add5(3))
  }
}
